--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "Name": "Romanceable Rasmodia",
     "Author": "Written by WerewolfMaster, haywrites, SVE compatability by PaintedParrot, Female Version by Nom0ri",
-    "Version": "2.0.3",
+    "Version": "2.1.1",
     "Description": "Changes old Wizard of the tower to the beautiful Witch Rasmodia",
     "UniqueID": "Nom0ri.RomRas",
     "UpdateKeys": ["Nexus:8265"],
@@ -9,7 +9,24 @@
         {
 		  "UniqueID": "Parrot.RomRas",
 		  "IsRequired": true
-        }
+        },
+		
+		{
+		  "UniqueID": "spacechase0.JsonAssets",
+		  "IsRequired": true,
+		},
+		{
+		  "UniqueID": "Tanpoponoko.SeasonalOutfits",
+		  "IsRequired": false,
+		},
+		{
+		  "UniqueID": "Poltergeister.SeasonalOutfitsSVE",
+		  "IsRequired": false,
+		},
+		{
+		  "UniqueID": "Poltergeister.SeasonalCuteCharacters",
+		  "IsRequired": false,
+		}
      ],
     "ContentPackFor": {
        "UniqueID": "Pathoschild.ContentPatcher"
